--- a/src/main/resources/com/example/examsplattaform/registerTeacher-view.fxml
+++ b/src/main/resources/com/example/examsplattaform/registerTeacher-view.fxml
@@ -6,10 +6,31 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.examsplattaform.controllers.RegisterViewController"
-            prefHeight="400.0" prefWidth="600.0">
-
-
+<?import javafx.scene.text.Font?>
+<AnchorPane prefHeight="400.0" prefWidth="264.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.examsplattaform.controllers.RegisterViewController">
+    <children>
+        <Label layoutX="53.0" layoutY="22.0" text="Registro de profesor">
+            <font>
+                <Font name="System Bold" size="16.0" />
+            </font>
+        </Label>
+        <Label layoutX="109.0" layoutY="56.0" text="Nombre:" />
+        <TextField fx:id="tfName" layoutX="58.0" layoutY="74.0" promptText="ingrese su nombre" />
+        <Label layoutX="113.0" layoutY="106.0" text="Cédula:" />
+        <TextField fx:id="tfId" layoutX="58.0" layoutY="124.0" promptText="ingrese su cedula" />
+        <Label layoutX="109.0" layoutY="156.0" text="Apellido:" />
+        <TextField fx:id="tfApellido" layoutX="58.0" layoutY="174.0" promptText="ingrese su Apellido" />
+        <Label layoutX="102.0" layoutY="207.0" text="Institución:" />
+        <TextField fx:id="tfCollege" layoutX="58.0" layoutY="225.0" promptText="ingrese su institución" />
+        <TextField fx:id="tfUser" layoutX="58.0" layoutY="277.0" promptText="ingrese un usuario" />
+        <Label layoutX="109.0" layoutY="259.0" text="Usuario:" />
+        <Label layoutX="99.0" layoutY="309.0" text="Contraseña:" />
+        <PasswordField fx:id="pfPassword" layoutX="56.0" layoutY="327.0" promptText="ingrese una contraseña" />
+        <Hyperlink fx:id="hlBack" layoutX="3.0" layoutY="2.0" onAction="#onBackLinkClick" text="&lt;-" underline="true">
+            <font>
+                <Font size="19.0" />
+            </font>
+        </Hyperlink>
+        <Button fx:id="btnRegister" layoutX="93.0" layoutY="373.0" mnemonicParsing="false" onAction="#onRegisterButtonClick" text="Registrarse" />
+    </children>
 </AnchorPane>
