--- a/src/main/resources/com/example/examsplattaform/studentPanel-view.fxml
+++ b/src/main/resources/com/example/examsplattaform/studentPanel-view.fxml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.examsplattaform.controllers.StudentPanelViewController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="427.0" prefWidth="579.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.examsplattaform.controllers.StudentPanelViewController">
+   <children>
+      <TableView fx:id="tableExams" layoutX="40.0" layoutY="195.0" onDragDetected="#onDragSelecttedItem" prefHeight="200.0" prefWidth="500.0">
+        <columns>
+          <TableColumn fx:id="colTirulo" prefWidth="208.79999542236328" text="Titulo" />
+          <TableColumn fx:id="colMateria" minWidth="0.0" prefWidth="155.199951171875" text="Materia" />
+            <TableColumn fx:id="colNota" prefWidth="135.19998168945312" text="Nota" />
+        </columns>
+      </TableView>
+      <Label layoutX="241.0" layoutY="14.0" text="Tu Panel">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnNewExam" layoutX="373.0" layoutY="155.0" mnemonicParsing="false" onAction="#onNewExamClick" text="Ingresar a un nuevo examen" />
+      <Label layoutX="40.0" layoutY="172.0" text="Tus examenes:" />
+   </children>
 </AnchorPane>
