--- a/src/main/resources/com/example/examsplattaform/examsCreation-view.fxml
+++ b/src/main/resources/com/example/examsplattaform/examsCreation-view.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.examsplattaform.controllers.ExamsCreationViewController"
-            prefHeight="400.0" prefWidth="600.0">
+
+<AnchorPane prefHeight="328.0" prefWidth="318.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.examsplattaform.controllers.ExamsCreationViewController">
     <children>
         <Label alignment="CENTER" layoutX="10.0" layoutY="41.0" text="Creación de tu Examen">
             <font>
@@ -25,7 +22,7 @@
         <TextField fx:id="tfSubject" layoutX="77.0" layoutY="187.0" prefHeight="26.0" prefWidth="168.0" promptText="Materia o tema del Examen" />
         <Label layoutX="124.0" layoutY="213.0" text="Nota máxima:" />
         <TextField fx:id="tfMaxGrade" layoutX="77.0" layoutY="231.0" prefHeight="26.0" prefWidth="168.0" promptText="Escriba la nota máxima" />
-        <Button fx:id="btnCreate" layoutX="139.0" layoutY="281.0" mnemonicParsing="false" onAction="#onCrearClick" text="Crear" />
+        <Button fx:id="btnCreate" layoutX="137.0" layoutY="282.0" mnemonicParsing="false" onAction="#onCrearClick" text="Crear" />
         <Hyperlink fx:id="hlBack" layoutX="10.0" layoutY="3.0" onAction="#onBackClicked" text="Volver" textAlignment="CENTER" underline="true" />
     </children>
 
